public/style/global.css
body {
	font: 18px/1.231 "Lato", sans-serif;
	padding: 0 15px 10px 15px;
	background-color: #2c3e50;
	color: #ECF0F1;
}

h1 {
	background-color: #34495E;
	color: #1abc9c;
	padding: 10px 15px;
	-webkit-border-radius: 6px 6px 6px 6px;
	-moz-border-radius: 6px 6px 6px 6px;
	border-radius: 6px 6px 6px 6px;
	display: inline-block;
}

ul {
	list-style-type: none;
	background-color: #16a085;
	-webkit-border-radius: 6px 6px 6px 6px;
	-moz-border-radius: 6px 6px 6px 6px;
	border-radius: 6px 6px 6px 6px;
	padding: 10px 10px;
	width: 60%;
}

 .no-bullet{
 	list-style-type: none;
 }

.item{
	background-color: #1abc9c;
	margin: 5px;
	width: 96%;
}

.result{
	padding:10px;
	-webkit-border-radius: 6px 6px 6px 6px;
	-moz-border-radius: 6px 6px 6px 6px;
	border-radius: 6px 6px 6px 6px;
	color:white;
	display: inline-block;
}

.number{
	font-size: 22px;
	font-weight: bolder;
}

.good{
	background-color:#27AE60;
}

.bad{
	background-color: #E74C3C;
}

.warning{
	background-color: #F1C40F;
}

@font-face {
  font-family: "Flat-UI-Icons-24";
  src: url("../fonts/Flat-UI-Icons-24.eot");
  src: url("../fonts/Flat-UI-Icons-24.eot?#iefix") format("embedded-opentype"), url("../fonts/Flat-UI-Icons-24.woff") format("woff"), url("../fonts/Flat-UI-Icons-24.ttf") format("truetype"), url("../fonts/Flat-UI-Icons-24.svg#Flat-UI-Icons-24") format("svg");
  font-weight: normal;
  font-style: normal; 
}

[data-icon]:before {
  font-family: "Flat-UI-Icons-24";
  content: attr(data-icon);
  speak: none;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased; 
}

.fui-time-24:before, .fui-steps-24:before, .fui-file-24:before, .fui-location-24:before, .fui-checkmark-24:before {
  font-family: "Flat-UI-Icons-24";
  speak: none;
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased; 
  color: white;
  margin-right: 8px;
}

.fui-time-24:before {
  content: "\e001"; 
}

.fui-file-24:before {
  content: "\e005"; 
}

.fui-steps-24:before {
  content: "\e006"; 
}

.fui-location-24:before {
  content: "\e00a";
}

.fui-checkmark-24:before {
  content: "\e010";
}

